acc/backend/yamls/registry-backend/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: v1-1-acc-registry-backend
  namespace: acc-app-hilversum
  labels:
    app: registry-backend
    release: "v1-1-acc"
spec:
  type: ClusterIP
  ports:
    - port: 8001
      name: http
      targetPort: 80
  selector:
    app: registry-backend
    release: v1-1-prod
