acc/backend/yamls/registry-backend/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: v1-1-acc-registry-backend-ingress
  namespace: acc-app-hilversum
  labels:
    app: registry-backend
    release: v1-1-acc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: registry-backend.hilversum.my-city.org
    http:
      paths:
      - path: /
        backend:
          serviceName: v1-1-acc-registry-backend
          servicePort: 8001
